[package]
name = "TodoActix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
json = "0.12.4"
serde = { version = "1.0.204", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
actix-cors = "0.7"
actix-contrib-logger = "0.1.0"
log = "0.4.22"
env_logger = "0.11.5"
